<resources>
    <string name="app_name">MagicShop</string>

    <!-- MESSAGGI REGISTRAZIONE -->
    <string name="register_button_label">Register</string>
    <string name="username_to_register">Username:</string>
    <string name="password_to_register" translatable="false">Password:</string>
    <string name="email_to_register" translatable="false">Email:</string>
    <string name="birthdate_to_register">Birthdate:</string>
    <string name="location_to_register">Location:</string>
    <string name="address_to_register">Address:</string>
    <string name="cap_to_register" translatable="false">CAP:</string>

    <!-- MESSAGGI MODIFICA CARTA -->
    <string name="card_name">Name</string>
    <string name="card_price">Price</string>
    <string name="modify_card">Modify selling product</string>
    <string name="modify_price">Modify price</string>
    <string name="eliminate_product">Eliminate product</string>

    <!-- LABELS -->
    <string name="anonymous_button_label">Anonymous</string>
    <string name="registration_button_label">Register</string>
    <string name="login_button_label">Log in</string>
    <string name="confirm_button_label">Confirm</string>
    <string name="old_data_button_label">Old Data</string>
    <string name="new_data_button_label">New Data</string>
    <string name="remote_data_button_label">Remote Data</string>
    <string name="user_area">User Area</string>
    <string name="test_db" translatable="false">TEST DATABASE</string>
    <string name="find_products" >FIND PRODUCTS</string>
    <string name="modify_button_label">Modify</string>
    <string name="user_area_button_label">User Area</string>
    <string name="log_out_button_label">Log Out</string>
    <string name="all">All</string>
    <string name="history">History</string>
    <string name="my_products">My Products</string>

    <!-- MESSAGGI D'ERRORE -->
    <string name="mandatory_field_error">The field %1$s is mandatory</string>
    <string name="wrong_credentials_error">Wrong credentials</string>
    <string name="different_passwords_error">The passwords should be the same</string>
    <string name="all_mandatory_fields_error">All the fields are mandatory</string>
    <string name="no_products_on_search">No products find with this search</string>
    <string name="success_product_buy">Purchase completed for the product.</string>
    <string name="no_products">No products on sale for you.</string>
    <string name="cap_error">Insert a 5 numbers CAP</string>
    <string name="mail_error">Insert a valid email address</string>
    <string name="existing_user_error">A user with this username already exist</string>
    <string name="existing_email_error">A user with this email address already exist</string>
    <string name="codice_fiscale_error">Insert a valid fiscal code</string> <!-- non so come si dice in inglese codice fiscale-->





    <!-- FIND PRODUCTS  -->
    <string name="name_product">Insert name product here</string>
    <string name="expansion">Expansion</string>
    <string name="rarity">Rarity</string>
    <string name="type">Type</string>
    <string name="search">Search</string>
    <string name="show">Show</string>

    <!-- MESSAGGI TOAST -->
    <string name="user_not_logged">"To do this you should log in first!"</string>

    <string name="confirm">"Confirm"</string>
    <string name="abort">"Abort"</string>
    <string name="confirm_shop_product">"Do you want to shop this product?"</string>
    <string name="title_price">"Sell the product "</string>
    <string name="message_price">"Enter the amount in Euro"</string>
    <string name="sell_price">Sell</string>
    <string name="modify_price_toast">"Modify"</string>
    <string name="undo_price">"Undo"</string>
    <string name="remove_price">"Remove"</string>
    <string name="error_price">"Insert correct import."</string>

    <string name="title_modify_price">"Modify the price for product "</string>
    <string name="remove_from_on_sale">"Remove from sale the product "</string>
    <!-- HISTORY -->
    <string name="history_bought">History of Product Bought</string>
    <string name="history_sold">History of Product Sold</string>
    <string name="seller_buyer">Seller / Buyer</string>
    <string name="date_text">Date of transaction</string>



    <!-- FRAGMENST -->
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="show_photo">Show Photo</string>
    <string name="edit">Edit details</string>
    <string name="add_photo">Add Photo</string>
    <string name="card_detail">Cards detail</string>
    <string name="user">User</string>
    <string name="price">Price</string>
    <string name="euro" translatable="false">€</string>


</resources>