<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAreaActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_to_register"
                android:layout_weight="2"
                style="@style/main_text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_username_data"
                android:layout_weight="1"
                style="@style/main_text_style"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_to_register"
                android:layout_weight="2"
                style="@style/main_text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_password_data"
                android:layout_weight="1"
                style="@style/main_text_style"/>

        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_to_register"
                android:layout_weight="2"
                style="@style/main_text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_email_data"
                android:layout_weight="1"
                style="@style/main_text_style"/>

        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_to_register"
                android:layout_weight="2"
                style="@style/main_text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_location_data"
                android:layout_weight="1"
                style="@style/main_text_style"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_to_register"
                android:layout_weight="2"
                style="@style/main_text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_address_data"
                android:layout_weight="1"
                style="@style/main_text_style"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cap_to_register"
                android:layout_weight="2"
                style="@style/main_text_style"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_cap_data"
                android:layout_weight="1"
                style="@style/main_text_style"/>

        </TableRow>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_button_label"
            android:id="@+id/modify_button"
            android:onClick="modifyInformations"
            android:layout_gravity="center"
            style="@style/main_button_style"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"
            android:id="@+id/history_button"
            android:onClick="showHistory"
            android:layout_gravity="center"
            style="@style/main_button_style"/>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>