<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/name_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="name"
                android:layout_weight="1"
                style="@style/main_text_style_list" />

            <TextView
                android:id="@+id/price_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="price"
                android:layout_weight="1"
                style="@style/main_text_style_list"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_marginTop="@dimen/buttons_buy_show_add_photo"
                android:id="@+id/shop_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/buy"
                android:layout_weight="1"
                style="@style/main_button_style"/>

            <Button
                android:layout_marginTop="@dimen/buttons_buy_show_add_photo"
                android:id="@+id/show_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/show_photo"
                android:layout_weight="1"
                style="@style/main_button_style" />
            <Button
                android:layout_marginTop="@dimen/buttons_buy_show_add_photo"
                android:id="@+id/edit_card_details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/edit"
                android:layout_weight="1"
                style="@style/main_button_style" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>