<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_seller_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/seller_buyer"
                style="@style/main_text_style_list"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/name_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="name"
                style="@style/main_text_style_list"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/name_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Product name"
                style="@style/main_text_style_list"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/price_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="Price"
                style="@style/main_text_style_list"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/main_text_style_list"
                android:text="@string/euro"
               />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_sell_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                style="@style/main_text_style_list"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/time_sell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="date time sold"
                style="@style/main_text_style_list"
                android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>